k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chart-museum-manager
  labels:
    app: chart-museum-manager
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: chart-museum-manager
